Fix issue with spacing in pad signing

--- a/frontend/app/less/signview.less
+++ b/frontend/app/less/signview.less
@@ -175,6 +175,7 @@
 
    .giveForSigning strong{
       color: @black;
+      margin-left: 10px;
 
       a.button {
         margin-left: 10px;
